# nicegui-extensions

./: .gitignore  README.md  pyproject.toml
nicegui_ext/: __init__.py  dialogs.py  draggable.py  helpers.py  icons.py  md.py  native_file_picker.py  ui.py
nicegui_ext/auto/: __init__.py  auto_element.py  class_element.py  parser.py  pydantic_element.py  select.py
