[project]
name = "nicegui-extensions"
version = "0.0.3"
description = ""
authors = [{ name = "Žiga Ivanšek", email = "ziga.ivansek@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "stdl>=0.5.1",
    "strto>=0.1.3",
    "objinspect>=0.2.9",
    "nicegui>=1.4.0",
]

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

keywords = []


[project.optional-dependencies]
test = ["pytest"]
dev = ["black", "pytest", "ruff"]
pydantic = ["pydantic>=2.4.0"]

[project.urls]
Repository = "https://github.com/zigai/nicegui-extensions"

[tool.black]
line-length = 100
target_version = ['py310']

[tool.ruff]
line-length = 100
extend-ignore = ["E731", "E741", "N802", "N803", "N806", "E501"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tests",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "E402"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
